[package]
name = "yeahboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = "1.16.0"
egui = "0.15.0"
egui_glium = "0.15.0"
glium = "0.30.2"
epi = "0.15.0"
image = "0.23.14"
structopt = "0.3.25"
anyhow = "1.0.52"
lazy_static = "1.4.0"
bitflags = "1.3.2"